# dns-ip-sync

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yml
cloudflare-dns-api/: Cargo.toml
cloudflare-dns-api/src/: lib.rs
cloudflare-dns-api/src/api/: mod.rs  records.rs  zones.rs
dns-ip-sync/: Cargo.toml
dns-ip-sync/src/: main.rs
hetzner-dns-api/: Cargo.toml
hetzner-dns-api/src/: lib.rs
hetzner-dns-api/src/api/: mod.rs  records.rs  zones.rs
src/: main.rs
src/api/: mod.rs  records.rs  zones.rs
