[package]
name = "rust-hetzner-dns"
version = "0.1.0"
authors = ["Christian Rodriguez Benthake <c.benthake@ecentral.de>"]
edition = "2018"
keywords = [
    "dns",
    "hetzner",
    "ip sync"
]
repository = "https://github.com/ecentral/hetzner-dns-ip-sync"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
local-ip-address = "0.4.4"
seahorse = "1.1"