[package]
name = "dns-ip-sync"
version = "0.1.0"
authors = ["Christian Rodriguez Benthake <c.benthake@ecentral.de>"]
edition = "2018"
keywords = [
    "dns",
    "hetzner",
    "ip sync"
]
repository = "https://github.com/ecentral/hetzner-dns-ip-sync"
readme = "README.md"
license = "MIT"

[dependencies]
seahorse = "1.1"
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.4.4"
hetzner-dns-api = { path = "../hetzner-dns-api" }
cloudflare-dns-api = { path = "../cloudflare-dns-api" }