[package]
name = "hetzner-dns-api"
version = "0.1.1"
edition = "2018"
authors = ["Christian Rodriguez Benthake <c.benthake@ecentral.de>"]
keywords = [
    "dns",
    "hetzner",
    "ip sync"
]
repository = "https://github.com/ecentral/hetzner-dns-ip-sync"
readme = "README.md"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }

[dev-dependencies]
mockito = "0.30.0"